src/pages/index.css
/* body {
    --bg: white;
    --textNormal: #222;
    --textTitle: #222;
    --textLink: blue;
    --hr: hsla(0, 0%, 0%, 0.2);
  
    background-color: var(--bg);
  }
  
  body.dark {
    -webkit-font-smoothing: antialiased;
  
    --bg: darkslategray;
    --textNormal: rgba(255, 255, 255, 0.88);
    --textTitle: white;
    --textLink: yellow;
    --hr: hsla(0, 0%, 100%, 0.2);
  } */
 .hi {
    font-size: 26px;
    font-weight: 600;
 }
 .intro {
    margin-right: auto;
    margin-left: 60px;
 }
 .projectsHeader {
    font-size: 26px;
    margin-left: 60px;
 }
  .learn-about-me {
    padding: 6px 11px;
    background: white;
    border-radius: 4px;
    font-size: 17px;
    border: 1px solid black;
    margin-bottom: 10px;
  }
  .learn-about-me:hover {
    border: 1px solid #006ce5;
    cursor: pointer;
    color: #006ce5;
  }
  .projectsBtn {
    padding: 6px 11px;
    background: white;
    border-radius: 4px;
    font-size: 17px;
    border: 1px solid black;
    margin-left: 59px;
  }
  .seeProjects {
      border-bottom: none !important;
  }
  .projectsBtn:hover {
    border: 1px solid #006ce5;
    cursor: pointer;
    color: #006ce5;
  }
  .see-posts {
    padding: 6px 11px;
    background: white;
    border-radius: 4px;
    font-size: 17px;
    border: 1px solid black;
    margin: 4px 0px 8px 0;
    
  }
  .see-posts:hover {
    border: 1px solid #006ce5;
    cursor: pointer;
    color: #006ce5;
  }
  .top-div {
      margin-left:63px;
  }
  .projects-section {
    position: relative;
    top: 36px;
    left: 60px;
  }
  .projects-section-index > p {
    font-size: 19px;
    width: 600px;
    max-width: 90%;
    margin-top: 6px;
    margin-right: auto;
    margin-left: auto;
  }
  .posts-section {
    margin-left: 60px;
  }
  .project1 {
    margin-left: 60px;
  }
  .project2 {
    margin-left: 60px;
  }
  .project3 {
    margin-left: 60px;
  }

  .projects-section > p {
    font-size: 18px;
    max-width: 575px;
    margin-left: 60px;
  }
  .projects-section a {
      margin-left: 60px;
  }
  .posts-section a {
      /* margin-left: 30px; */
  }
  .contact-section {
      margin-left: 60px;
  }
  .mail-text{
      color: #006ce5;
      font-size: 21px;
  }
.projects-h2 {
    display: none;
}
.genomediv {
    height: auto;
    overflow-x: auto;
}
 .genome {
     height: auto;
     overflow-x: auto;
 }
@media(max-width:550px){
    .dp {
    font-size: 22px !important;
    bottom: 4px;
    left: -3px;
    }
    .intro {
        margin-right: auto;
        margin-left: 0px;
     }
    .projects-section {
        position: relative;
        top: 6px;
        left: 0px;
    }
    .top-div {
        margin-left:0px;
    }
    .posts-section {
        margin-left: 0px;
      }
    .posts-section a {
        position: relative;
        margin-left: 0;
    }
    .projects-section-index {
        position: relative;
        top: 6px;
    }
    .posts-section-index a {
        position: relative;
        left: 15px;
        margin-left: 0;
    }
    .mail-text {
        text-align: center;
        margin-left: 0px;
    }
    #contactme {
        text-align: center;
    }
    .contact-section {
        text-align: center;
        margin-left: 0px;
    }
    .latestPosts {
        text-align: center;
    }
    .projects-section-index > p {
        font-size: 18px;
        width: 575px;
        margin-left: 0px;
        max-width: 99%;

    }
    .projects-section > p {
        font-size: 18px;
        max-width: 575px;
        margin-left: 0px;
    }
    .projectsHeader {
        text-align: center;
        margin-left: 0px;
    }
    .projects-section-index a {
        margin-left: 0px;
        text-align: center;
    }
    .projects-section a {
        margin-left: 0px;
        text-align: center;
    }
    .projectsBtn {
        margin-left: 0px;
    }
}

